// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render alert with type 1`] = `
<div
  class="neon-alert"
  style="background-color: rgb(83, 82, 237);"
>
  info
</div>
`;

exports[`<Alert /> should render alert with type 2`] = `
<div
  class="neon-alert"
  style="background-color: rgb(255, 165, 2);"
>
  warning
</div>
`;

exports[`<Alert /> should render alert with type 3`] = `
<div
  class="neon-alert"
>
  positive
</div>
`;

exports[`<Alert /> should render alert with type 4`] = `
<div
  class="neon-alert"
>
  negative
</div>
`;

exports[`<Alert /> should render default 1`] = `
<div>
  <div
    class="neon-alert"
    style="background-color: rgb(83, 82, 237);"
  >
    default
  </div>
</div>
`;
